# kart-machine-manager

./: .gitignore  README.md
.github/workflows/: main.yml  ruff.yml
app/: Makefile  Pipfile  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
app/spec/can/: DL1MK3_130424_052010.CMG  dl1.dbc
app/src/application/: __init__.py  application.py
app/src/can/: can_listeners.py  can_master.py  mock_can_sender.py
app/src/gui/: __init__.py  gui.py  main.qml  mock_machine_gui.py  rpm_bar.py  self_defined_widgets.py
app/src/machine/: can_master.py  can_master_base.py  can_master_mock.py  machine.py  runIDtest.py  もっく_can_master copy.py
app/src/manager/: manager.py
app/src/message/: message.py
app/src/models/: models.py
app/src/udp/: udp_transmitter.py
app/src/util/: config.py
can-mock/: platformio.ini
can-mock/src/: main.cpp
