[project]
name = "kart-machine-manager"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Oryomei", email = "o.ryomei1020@gmail.com" }]
dependencies = [
    "python-can>=4.3.1",
    "pyqt5>=5.15.10",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "cantools>=39.4.5",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.9.0", "ruff>=0.4.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
strict = true
ignore_missing_imports = true
