[project]
name = "kart-machine-manager"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Oryomei", email = "o.ryomei1020@gmail.com" }]
dependencies = [
    "python-can>=4.3.1",
    "pyqt5>=5.15.10",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "cantools>=39.4.5",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.9.0", "ruff>=0.4.1"]

[tool.rye.scripts]
prod = { cmd = "python main.py", env = { DISPLAY = ":0" } }
debug = { cmd = "python main.py", env = { DEBUG = "TRUE" } }


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true
